// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReserveContainer /> renders initial reserve section correctly renders correctly 1`] = `
<div
  id="reserve"
>
  <div
    className="tc white reserve-container"
  >
    <h3
      className="white f-en b"
    >
      Reservation
    </h3>
    <p>
      기업체 각종 행사, 모임 단체 식사 주문받습니다.
    </p>
    <WithStyles(Button)
      className="btn--reserve-modal [object Object]"
      color="secondary"
      onClick={[Function]}
      variant="contained"
    >
      예약하기
    </WithStyles(Button)>
  </div>
</div>
`;

exports[`<ReserveContainer /> renders initial reserve section correctly when clicking reserve button load a reserve Modal component 1`] = `
<div
  id="reserve"
>
  <div
    className="tc white reserve-container"
  >
    <h3
      className="white f-en b"
    >
      Reservation
    </h3>
    <p>
      기업체 각종 행사, 모임 단체 식사 주문받습니다.
    </p>
    <WithStyles(Button)
      className="btn--reserve-modal [object Object]"
      color="secondary"
      onClick={[Function]}
      variant="contained"
    >
      예약하기
    </WithStyles(Button)>
  </div>
  <LoadableComponent
    component={
      <LoadableComponent
        handleChange={[Function]}
        handleClose={[Function]}
        handleSubmit={[Function]}
        inThreeDays="1970-01-04"
        reserveInfo={
          Object {
            "contact": "(0  )    -    ",
            "date": "1970-01-04",
            "name": "",
            "number": "",
            "place": "",
            "submitBtnClicked": false,
            "time": "12:30",
          }
        }
        submitBtnClicked={false}
      />
    }
  />
</div>
`;
